<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelMac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hintMac"
                android:text="@string/mac" />

            <EditText
                android:id="@+id/inputMac"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hintMac"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/labelMac"
                android:maxLength="4"
                android:text="@string/defaultMac"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
        </LinearLayout>

        <Switch
            android:id="@+id/switchAlarm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:text="@string/alarm" />

        <Switch
            android:id="@+id/switchMoving"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:text="@string/moving" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelChannel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/channel" />

                <RadioGroup
                    android:id="@+id/radioGroupChannel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/Channel37"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/_37" />

                    <RadioButton
                        android:id="@+id/Channel38"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/_38" />

                    <RadioButton
                        android:id="@+id/Channel39"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/_39" />
                </RadioGroup>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mode" />

                <RadioGroup
                    android:id="@+id/radioGroupMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/MODE_LOW_POWER"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/mode_low_power" />

                    <RadioButton
                        android:id="@+id/MODE_BALANCED"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/mode_balanced" />

                    <RadioButton
                        android:id="@+id/MODE_LOW_LATENCY"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/mode_low_latency" />
                </RadioGroup>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/labelTxPower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tx_power" />

                <RadioGroup
                    android:id="@+id/radioGroupTxPower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/TX_POWER_ULTRA_LOW"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/tx_power_ultra_low" />

                    <RadioButton
                        android:id="@+id/TX_POWER_LOW"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/tx_power_low" />

                    <RadioButton
                        android:id="@+id/TX_POWER_MEDIUM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/tx_power_medium" />

                    <RadioButton
                        android:id="@+id/TX_POWER_HIGH"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/tx_power_high" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="#009688"
            android:padding="12dp"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp">

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/start" />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>